--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -4,9 +4,6 @@
     <Filter Include="Core Types">
       <UniqueIdentifier>{1d9661e2-d4b2-4f18-a607-56be2ae2e0c6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Debug">
-      <UniqueIdentifier>{847f0a93-315c-4824-8f5a-20cf432f68eb}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Human Space Library">
       <UniqueIdentifier>{fefdab5f-3d19-4a52-95e8-540fa05cca61}</UniqueIdentifier>
     </Filter>
@@ -21,131 +18,314 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Transcendence\Transcendence\Game\Extensions\Debug\AdventureSample.xml">
-      <Filter>Debug</Filter>
+    <None Include="Transcendence.xml" />
+    <None Include="Antarctica.xml">
+      <Filter>Human Space Library</Filter>
     </None>
-    <None Include="..\Transcendence\Transcendence\Game\Extensions\Debug\DebugCode.xml">
-      <Filter>Debug</Filter>
+    <None Include="AresOrthodoxy.xml">
+      <Filter>Human Space Library</Filter>
     </None>
-    <None Include="..\Transcendence\Transcendence\Game\Extensions\Debug\DebugShips.xml">
-      <Filter>Debug</Filter>
+    <None Include="BattleArena.xml">
+      <Filter>Human Space Library</Filter>
     </None>
-    <None Include="..\Transcendence\Transcendence\Game\Extensions\Debug\HighLevelTest.xml">
-      <Filter>Debug</Filter>
+    <None Include="BattleArenaGladiators.xml">
+      <Filter>Human Space Library</Filter>
     </None>
-    <None Include="..\Transcendence\Transcendence\Game\Extensions\Debug\PerformanceTest.xml">
-      <Filter>Debug</Filter>
+    <None Include="Benedict00.xml">
+      <Filter>Human Space Library</Filter>
     </None>
-    <None Include="..\Transcendence\Transcendence\Game\Extensions\Debug\RandomnessTest.xml">
-      <Filter>Debug</Filter>
+    <None Include="Benedict01.xml">
+      <Filter>Human Space Library</Filter>
     </None>
-    <None Include="..\Transcendence\Transcendence\Game\Extensions\Debug\ShipChangeSample.xml">
-      <Filter>Debug</Filter>
+    <None Include="Benedict02.xml">
+      <Filter>Human Space Library</Filter>
     </None>
-    <None Include="..\Transcendence\TransCore\Code.xml" />
-    <None Include="..\Transcendence\TransCore\Compatibility10.xml" />
-    <None Include="..\Transcendence\TransCore\CoreCode.xml" />
-    <None Include="..\Transcendence\TransCore\CoreEffects.xml" />
-    <None Include="..\Transcendence\TransCore\CoreTypes.xml" />
-    <None Include="..\Transcendence\TransCore\Transcendence.xml" />
-    <None Include="..\Transcendence\TransCore\AresOrthodoxy.xml" />
-    <None Include="..\Transcendence\TransCore\BattleArena.xml" />
-    <None Include="..\Transcendence\TransCore\BattleArenaGladiators.xml" />
-    <None Include="..\Transcendence\TransCore\Antarctica.xml" />
-    <None Include="..\Transcendence\TransCore\BlackMarket.xml" />
-    <None Include="..\Transcendence\TransCore\CentauriWarlords.xml" />
-    <None Include="..\Transcendence\TransCore\CharonFortress.xml" />
-    <None Include="..\Transcendence\TransCore\CharonPirates.xml" />
-    <None Include="..\Transcendence\TransCore\Commonwealth.xml" />
-    <None Include="..\Transcendence\TransCore\CommonwealthAgricultural.xml" />
-    <None Include="..\Transcendence\TransCore\CommonwealthFleet.xml" />
-    <None Include="..\Transcendence\TransCore\CommonwealthMetropolis.xml" />
-    <None Include="..\Transcendence\TransCore\CommonwealthMilitia.xml" />
-    <None Include="..\Transcendence\TransCore\CommonwealthMining.xml" />
-    <None Include="..\Transcendence\TransCore\CorporateHierarchy.xml" />
-    <None Include="..\Transcendence\TransCore\Domina.xml" />
-    <None Include="..\Transcendence\TransCore\DwargRaiders.xml" />
-    <None Include="..\Transcendence\TransCore\EncountersVol01.xml" />
-    <None Include="..\Transcendence\TransCore\Eridani.xml" />
-    <None Include="..\Transcendence\TransCore\HSCompatibility.xml" />
-    <None Include="..\Transcendence\TransCore\HumanSpaceMap.xml" />
-    <None Include="..\Transcendence\TransCore\Iocrym.xml" />
-    <None Include="..\Transcendence\TransCore\KateMorgental.xml" />
-    <None Include="..\Transcendence\TransCore\KorolovShipping.xml" />
-    <None Include="..\Transcendence\TransCore\Luminous.xml" />
-    <None Include="..\Transcendence\TransCore\MiscItems.xml" />
-    <None Include="..\Transcendence\TransCore\OutlawMiners.xml" />
-    <None Include="..\Transcendence\TransCore\Rasiermesser.xml" />
-    <None Include="..\Transcendence\TransCore\Ringers.xml" />
-    <None Include="..\Transcendence\TransCore\RogueFleet.xml" />
-    <None Include="..\Transcendence\TransCore\SistersOfDomina.xml" />
-    <None Include="..\Transcendence\TransCore\StdArmor.xml" />
-    <None Include="..\Transcendence\TransCore\StdAutons.xml" />
-    <None Include="..\Transcendence\TransCore\StdDevices.xml" />
-    <None Include="..\Transcendence\TransCore\StdDockScreens.xml" />
-    <None Include="..\Transcendence\TransCore\StdEffects.xml" />
-    <None Include="..\Transcendence\TransCore\StdExplosions.xml" />
-    <None Include="..\Transcendence\TransCore\StdFuel.xml" />
-    <None Include="..\Transcendence\TransCore\StdPlayerShips.xml" />
-    <None Include="..\Transcendence\TransCore\StdShields.xml" />
-    <None Include="..\Transcendence\TransCore\StdSovereigns.xml" />
-    <None Include="..\Transcendence\TransCore\StdSystems.xml" />
-    <None Include="..\Transcendence\TransCore\StdTypes.xml" />
-    <None Include="..\Transcendence\TransCore\StdUnknownItems.xml" />
-    <None Include="..\Transcendence\TransCore\StdWeapons.xml" />
-    <None Include="..\Transcendence\TransCore\StKatharines.xml" />
-    <None Include="..\Transcendence\TransCore\SungSlavers.xml" />
-    <None Include="..\Transcendence\TransCore\Teratons.xml" />
-    <None Include="..\Transcendence\TransCore\Tinkers.xml" />
-    <None Include="..\Transcendence\TransCore\UrakWarlords.xml" />
-    <None Include="..\Transcendence\TransCore\UsefulItems.xml" />
-    <None Include="..\Transcendence\TransCore\Elysium.xml" />
-    <None Include="..\Transcendence\TransCore\Heretic.xml" />
-    <None Include="..\Transcendence\TransCore\Huari.xml" />
-    <None Include="..\Transcendence\TransCore\PlayerShips.xml" />
-    <None Include="..\Transcendence\TransCore\PointJuno.xml" />
-    <None Include="..\Transcendence\TransCore\StarsOfThePilgrim.xml" />
-    <None Include="..\Transcendence\TransCore\BenedictStoryArc.xml" />
-    <None Include="..\Transcendence\TransCore\Benedict00.xml" />
-    <None Include="..\Transcendence\TransCore\Benedict02.xml" />
-    <None Include="..\Transcendence\TransCore\Benedict03.xml" />
-    <None Include="..\Transcendence\TransCore\Benedict01.xml" />
-    <None Include="..\Transcendence\TransCore\HUD.xml" />
-    <None Include="..\Transcendence\TransCore\RPGAnalyzers.xml" />
-    <None Include="..\Transcendence\TransCore\RPGAutons.xml" />
-    <None Include="..\Transcendence\TransCore\RPGAuxDevices.xml" />
-    <None Include="..\Transcendence\TransCore\RPGBehaviors.xml" />
-    <None Include="..\Transcendence\TransCore\RPGCharacters.xml" />
-    <None Include="..\Transcendence\TransCore\RPGCode.xml" />
-    <None Include="..\Transcendence\TransCore\RPGCompatibility.xml" />
-    <None Include="..\Transcendence\TransCore\RPGDockScreens.xml" />
-    <None Include="..\Transcendence\TransCore\RPGMissions.xml" />
-    <None Include="..\Transcendence\TransCore\RPGPlayer.xml" />
-    <None Include="..\Transcendence\TransCore\RPGShipScreens.xml" />
-    <None Include="..\Transcendence\TransCore\RPGTypes.xml" />
-    <None Include="..\Transcendence\TransCore\RPGWingmen.xml" />
-    <None Include="..\Transcendence\TransCore\RPGArmorDockScreens.xml" />
-    <None Include="..\Transcendence\TransCore\RPGDeviceDockScreens.xml" />
-    <None Include="..\Transcendence\TransCore\RPGCharacterClasses.xml" />
-    <None Include="..\Transcendence\TransCore\RPGDialog.xml" />
-    <None Include="..\Transcendence\TransCore\Environments.xml" />
-    <None Include="..\Transcendence\TransCore\Groups.xml" />
-    <None Include="..\Transcendence\TransCore\Ice.xml" />
-    <None Include="..\Transcendence\TransCore\Metallic.xml" />
-    <None Include="..\Transcendence\TransCore\Mining.xml" />
-    <None Include="..\Transcendence\TransCore\Neurohack.xml" />
-    <None Include="..\Transcendence\TransCore\Primordial.xml" />
-    <None Include="..\Transcendence\TransCore\Rocky.xml" />
-    <None Include="..\Transcendence\TransCore\Stargates.xml" />
-    <None Include="..\Transcendence\TransCore\StarSystems.xml" />
-    <None Include="..\Transcendence\TransCore\UniverseCompatibility.xml" />
-    <None Include="..\Transcendence\TransCore\UniverseEffects.xml" />
-    <None Include="..\Transcendence\TransCore\Volcanic.xml" />
-    <None Include="..\Transcendence\TransCore\Worlds.xml" />
-    <None Include="..\Transcendence\TransCore\Stars.xml" />
-    <None Include="..\Transcendence\TransCore\Ovoids.xml" />
+    <None Include="Benedict03.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="BenedictStoryArc.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="BlackMarket.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CentauriWarlords.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CharonFortress.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CharonPirates.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Code.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Commonwealth.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CommonwealthAgricultural.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CommonwealthFleet.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CommonwealthMetropolis.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CommonwealthMilitia.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CommonwealthMining.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Compatibility10.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CoreCode.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CoreEffects.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CoreTypes.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="CorporateHierarchy.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Domina.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="DwargRaiders.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Elysium.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="EncountersVol01.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Environments.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Eridani.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Groups.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Heretic.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="HSCompatibility.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Huari.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="HUD.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="HumanSpaceMap.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Ice.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Iocrym.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="KateMorgental.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="KorolovShipping.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Luminous.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Metallic.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Mining.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="MiscItems.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Neurohack.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="OutlawMiners.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Ovoids.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="PlayerShips.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="PointJuno.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Primordial.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Rasiermesser.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Ringers.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Rocky.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RogueFleet.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGAnalyzers.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGArmorDockScreens.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGAutons.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGAuxDevices.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGBehaviors.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGCharacterClasses.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGCharacters.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGCode.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGCompatibility.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGDeviceDockScreens.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGDialog.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGDockScreens.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGMissions.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGPlayer.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGShipScreens.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGTypes.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="RPGWingmen.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="SistersOfDomina.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Stargates.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Stars.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StarsOfThePilgrim.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StarSystems.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdArmor.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdAutons.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdDevices.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdDockScreens.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdEffects.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdExplosions.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdFuel.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdPlayerShips.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdShields.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdSovereigns.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdSystems.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdTypes.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdUnknownItems.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StdWeapons.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="StKatharines.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="SungSlavers.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Teratons.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Tinkers.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="UniverseCompatibility.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="UniverseEffects.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="UrakWarlords.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="UsefulItems.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Volcanic.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
+    <None Include="Worlds.xml">
+      <Filter>Human Space Library</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="..\Transcendence\TransCore\Benedict.xml" />
+    <Xml Include="Benedict.xml">
+      <Filter>Human Space Library</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
