--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -84,7 +84,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="CoreTypes.xml">
+    <None Include="CoreTypesLibrary.xml">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -315,6 +315,12 @@
     </None>
     <None Include="Stars.xml" />
     <None Include="Ovoids.xml" />
+    <Xml Include="CompatibilityLibrary.xml" />
+    <Xml Include="CorePlaceholders.xml" />
+    <Xml Include="HumanSpaceVol01.xml" />
+    <Xml Include="Ore.xml" />
+    <Xml Include="RPGLibrary.xml" />
+    <Xml Include="UniverseLibrary.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
