--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -307,8 +307,8 @@
     <None Include="StarSystems.xml">
       <SubType>Designer</SubType>
     </None>
-    <None Include="UniverseCompatibility.xml" />
-    <None Include="UniverseEffects.xml" />
+    <None Include="GalaxyCompatibility.xml" />
+    <None Include="GalaxyEffects.xml" />
     <None Include="Volcanic.xml" />
     <None Include="Worlds.xml">
       <SubType>Designer</SubType>
@@ -320,7 +320,7 @@
     <Xml Include="HumanSpaceVol01.xml" />
     <Xml Include="Ore.xml" />
     <Xml Include="RPGLibrary.xml" />
-    <Xml Include="UniverseLibrary.xml" />
+    <Xml Include="GalaxyLibrary.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
