--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Game/Extensions/
 Game/TDBs/
 Game/TransData/
 Game/Debug.log
-Game/HighScore.xml
+Game/HighScores.xml
 Game/Settings.xml
 Game/TransData.xml
 Game/*.exe
@@ -55,6 +55,7 @@ dlldata.c
 *_p.c
 *_i.h
 *.ilk
+*.map
 *.meta
 *.obj
 *.pch
