--- a/TransData/TransData.vcxproj
+++ b/TransData/TransData.vcxproj
@@ -323,6 +323,9 @@
       <SubType>Designer</SubType>
     </Xml>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Game\TLisp\MathUnitTest.tlisp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
