--- a/Transcendence/Transcendence.rc
+++ b/Transcendence/Transcendence.rc
@@ -59,8 +59,8 @@ APPICON                 ICON                    "Resources\\Transcendence.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,5,400,0
- PRODUCTVERSION 1,5,400,0
+ FILEVERSION 1,6,201,0
+ PRODUCTVERSION 1,6,201,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -77,13 +77,13 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Kronosaur Productions, LLC"
             VALUE "FileDescription", "Transcendence"
-            VALUE "FileVersion", "1.5.400.0"
+            VALUE "FileVersion", "1.6.201.0"
             VALUE "InternalName", "Transcendence"
-            VALUE "LegalCopyright", "Copyright © 2003-2014 Kronosaur Productions, LLC. All Rights Reserved."
+            VALUE "LegalCopyright", "Copyright © 2003-2015 Kronosaur Productions, LLC. All Rights Reserved."
             VALUE "LegalTrademarks", "Transcendence is a registered trademark of Kronosaur Productions, LLC."
             VALUE "OriginalFilename", "Transcendence.exe"
             VALUE "ProductName", "Transcendence"
-            VALUE "ProductVersion", "1.5"
+            VALUE "ProductVersion", "1.6 Beta 1"
         END
     END
     BLOCK "VarFileInfo"
