--- a/TransData/TransData.vcxproj
+++ b/TransData/TransData.vcxproj
@@ -324,6 +324,7 @@
     </Xml>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Game\TLisp\ComparisonUnitTest.tlisp" />
     <None Include="..\Game\TLisp\MathUnitTest.tlisp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
